src/test/deca/context/valid/pierre/objects/nullParameters.deca
class A {
    void test(int a) {}
}
{
    A a = new A();
    a.test(null);
}
